# OrdeRR

./: .gitignore  .repomixignore  CASH_BOOK_REQUIREMENTS.md  FIVE_DAY_CLOSE_REQUIREMENTS.md  Procfile  REGISTERS_REMINDERS_REQUIREMENTS.md  check_db.py  cleanup_db.py  create_templates.ps1  initi_db.py  migrate_phase2.py  migrate_phase3.py  migrate_phase4.py  migrate_phase4_inbound_messages.py  migrate_unclear_items.py  output.txt  pyproject.toml  render.yaml  repomix-output.xml  repomix.config.json  requirements.txt  seed_customers.py  template.json  test_billing_flags.db  test_database.py  test_models.py  test_parser.py
app/: auth.py  database.py  main.py
app/config/: flags.py
app/models/: __init__.py  customer.py  customer_product_alias.py  customer_product_stats.py  inbound_message.py  invoice.py  noise_phrase.py  order.py  salesperson.py  session.py  unclear_item_alias.py
app/routes/: admin.py  billing.py  dashboard.py  ledger.py  rates.py  unclear_items_routes.py  webhook.py
app/services/: adhoc_reporter.py  amount_in_words.py  billing_service.py  customer_service.py  intent_classifier.py  notifier.py  (+16 more)
docs/: VASY_EXPORTS.md
orderr_core/: auth.py  config.py  constants.py  database.py  dates.py  main.py  templating.py  utils.py
tests/: README.md  conftest.py  test_billing_flags_off.py  test_billing_integration.py  test_customer_service.py  test_onboarding.py  test_order_flow.py  test_parser_unit.py  test_pending_orders.py  test_rate_billing.py  test_template_parser.py  test_validate_name.py
tools/: README_VASY.md  requirements-vasy.txt  vasy_sync.py
(+135 files in other folders)
