[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderr-core"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "sqlalchemy==2.0.49",
    "pydantic==2.13.4",
    "anthropic==0.100.0",
    "psycopg2-binary==2.9.12",
    "python-dotenv==1.2.2",
    "jinja2==3.1.6",
    "apscheduler==3.11.2",
    "uvicorn==0.46.0",
    "httpx==0.28.1",
    "requests==2.33.1",
    "tenacity==9.1.4",
    "tzlocal==5.3.1",
    "python-multipart==0.0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orderr_core*"]